k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bakery-ingress
  namespace: bakery-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: bakery.local
      http:
        paths:
          - path: /api/nutrition
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 4000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-api
                port:
                  number: 4000
